syntax = "proto3";

option go_package = "./proto";

package root;

// 用户信息
message User {
  int64 id = 1;
  // QQ/微信服务返回给我们的唯一标识
  string account = 2;
  // 登录方法：“qq” or "wx"
  string way = 3;
  string name = 4;
  string email = 5;
  string phone = 6;
  int64  is_notify = 7; // 1=通知 2=不通知
  int64  create_at = 8;
  int64  update_at = 9;
  int64  last_login_at = 10;
}

service Root {
  rpc getUser (GetUserRequest) returns (GetUserReply) {}
  rpc getUserList (GetUserListRequest) returns (GetUserListReply) {}
  rpc deleteUser (DeleteUserRequest) returns (DeleteUserRespond) {}
  rpc clientUniStream(stream StreamRequest) returns (StreamResponse) {};
}
message StreamPoint {
  string name = 1;
  int32  value = 2;
}
message StreamRequest {
  StreamPoint pt = 1;
}
message StreamResponse {
  StreamPoint pt = 1;
};
message GetUserRequest {
  int64 id = 1;
}
message GetUserReply {
  string user = 1;
}
message GetUserListRequest {
  int64 offset = 1;
  int64 limit = 2;
}
message GetUserListReply {
  string userList = 1;
  int64 total = 2;
}
message DeleteUserRequest {
  int64 user_id = 1;
}
message DeleteUserRespond {
  string msg = 1;
}
